--- a/app/src/main/res/layout/video_detail_activity.xml
+++ b/app/src/main/res/layout/video_detail_activity.xml
@@ -143,11 +143,11 @@
         android:layout_height="wrap_content"
         android:text="date"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/tv_mylist"
         app:layout_constraintStart_toStartOf="@id/tv_title"
-        app:layout_constraintTop_toTopOf="@id/btn_add_mylist" />
+        app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
     <TextView
         android:id="@+id/tv_channel"
