--- a/app/src/main/res/layout/video_detail_activity.xml
+++ b/app/src/main/res/layout/video_detail_activity.xml
@@ -149,6 +149,16 @@
         app:layout_constraintStart_toStartOf="@id/tv_title"
         app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
+    <ImageView
+        android:id="@+id/iv_channel"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@color/white"
+        app:layout_constraintEnd_toStartOf="@id/tv_channel"
+        app:layout_constraintTop_toTopOf="@id/btn_back"
+        app:layout_constraintBottom_toBottomOf="@id/btn_back"
+        android:layout_marginEnd="10dp"/>
+
     <TextView
         android:id="@+id/tv_channel"
         android:layout_width="wrap_content"
