--- a/app/src/main/res/layout/video_detail_activity.xml
+++ b/app/src/main/res/layout/video_detail_activity.xml
@@ -123,18 +123,19 @@
     <ScrollView
         android:id="@+id/sv_description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_mylist">
 
-    <TextView
-        android:id="@+id/tv_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="영상 설명 / 영상 설명"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        />
+        <TextView
+            android:id="@+id/tv_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:text="영상 설명 / 영상 설명"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
     </ScrollView>
 
     <TextView
@@ -149,27 +150,32 @@
         app:layout_constraintStart_toStartOf="@id/tv_title"
         app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_channel"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginEnd="10dp"
         android:src="@color/white"
-        app:layout_constraintEnd_toStartOf="@id/tv_channel"
-        app:layout_constraintTop_toTopOf="@id/btn_back"
         app:layout_constraintBottom_toBottomOf="@id/btn_back"
-        android:layout_marginEnd="10dp"/>
+        app:layout_constraintEnd_toStartOf="@+id/tv_channel"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/btn_back"
+        app:shapeAppearanceOverlay="@style/RoundedShapeAppearanceOverlay"/>
 
     <TextView
         android:id="@+id/tv_channel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="채널명"
-        android:textColor="@color/white"
+        android:textColor="@color/blue"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/btn_back"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/iv_channel"
         app:layout_constraintTop_toTopOf="@id/btn_back" />
 
 
