--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -107,5 +107,17 @@
         app:tint="@null"
         tools:ignore="ContentDescription"/>
 
+    <TextView
+        android:id="@+id/tv_noResults"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="비디오가 없습니다"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/rv_video"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/rv_video" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
