--- a/app/src/main/res/layout/dialog_edit.xml
+++ b/app/src/main/res/layout/dialog_edit.xml
@@ -37,7 +37,7 @@
 
         <EditText
             android:id="@+id/et_content"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:backgroundTint="@color/white"
@@ -47,14 +47,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardView" />
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            android:gravity="center"
+            android:maxLength="10"
+             />
 
         <Button
             android:id="@+id/btn_save"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="60dp"
-            android:text="확인"
+            android:text="@string/dialog_save"
             app:layout_constraintBottom_toBottomOf="@+id/btn_cancle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/btn_cancle" />
@@ -66,7 +69,7 @@
             android:layout_marginStart="60dp"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="30dp"
-            android:text="취소"
+            android:text="@string/dialog_cancle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_content" />
