--- a/app/src/main/res/layout/my_video_fragment.xml
+++ b/app/src/main/res/layout/my_video_fragment.xml
@@ -27,6 +27,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_title"
+        android:scaleType="fitXY"
         app:shapeAppearanceOverlay="@style/RoundedShapeAppearanceOverlay" />
 
     <TextView
